docs(Demo): fix safari layout issue

--- a/demo/app/app.component.css
+++ b/demo/app/app.component.css
@@ -21,4 +21,5 @@
 md-tab-group ::ng-deep .mat-tab-body-wrapper {
 
   height: 100%;
+  flex: 1 1 auto;
 }
